Fix Proxy / QV4::Lookup interaction

If an object is proxied, we can't use the optimized getters for the
lookup, as those would bypass the custom proxy logic.

Fix this by always using the fallback code path when encountering a
Proxy object.

Pick-to: 6.7 6.5
Fixes: QTBUG-112320
Change-Id: Idd8d4f2cd0134ada010448d470cfc68e765ef125
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 2e8acbdf16bd9948c5e433d56024d93ac051baca)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>