tests/auto/qml/qqmlecmascript/tst_qqmlecmascript.cpp
@@ -401,6 +401,7 @@ private slots:
     void sequenceConversionMethod();
     void proxyIteration();
     void proxyHandlerTraps();
+    void lookupsDoNotBypassProxy();
     void gcCrashRegressionTest();
     void cmpInThrows();
     void frozenQObject();
@@ -10152,6 +10153,17 @@ void tst_qqmlecmascript::proxyHandlerTraps()
     QJSEngine engine;
     QJSValue value = engine.evaluate(expression);
     QVERIFY(value.isString() && value.toString() == QStringLiteral("SUCCESS"));
+}
+
+void tst_qqmlecmascript::lookupsDoNotBypassProxy()
+{
+    QQmlEngine engine;
+    // we need a component to have a proper compilation to byte code;
+    // otherwise, we don't actually end up with lookups
+    QQmlComponent comp(&engine, testFileUrl("lookupsDoNotBypassProxy.qml"));
+    QVERIFY(comp.isReady());
+    std::unique_ptr<QObject> obj { comp.create() };
+    QCOMPARE(obj->property("result").toInt(), 3);
 }
 
 void tst_qqmlecmascript::cmpInThrows()
